fix: navbar component

--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,6 @@
   --font-inter: "Inter", sans-serif;
 }
 
-@layer base {
-  body {
-    font-family: var(--font-inter);
-  }
-}
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -130,7 +124,13 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-inter);
+  }
+
+  button {
+    @apply cursor-pointer
   }
 }
